--- a/_config.yml
+++ b/_config.yml
@@ -83,46 +83,46 @@ defaults:
   - scope:
       type: "category"
     values:
-      layout: "default"
-      description: "Daftar konten yang ada disortir berdasarkan kategori pilihan."
-      image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
-      author: "ASIBUKA Group"
-      robots: "index, follow"
-      keywords: "kategori, category"
-      lang: "id"
+      layout: default
+      description: Daftar konten yang ada disortir berdasarkan kategori pilihan.
+      image: https://asibuka.com/assets/img/ASIBUKA-Blue.webp
+      author: ASIBUKA Group
+      robots: index, follow
+      keywords: kategori, category
+      lang: id
 
   - scope:
       type: "tag"
     values:
-      layout: "default"
-      description: "Daftar konten yang ada disortir berdasarkan tag pilihan."
-      image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
-      author: "ASIBUKA Group"
-      robots: "index, follow"
-      keywords: "kategori, category"
-      lang: "id"
+      layout: default
+      description: Daftar konten yang ada disortir berdasarkan tag pilihan.
+      image: https://asibuka.com/assets/img/ASIBUKA-Blue.webp
+      author: ASIBUKA Group
+      robots: index, follow
+      keywords: tag, kata kunci, keyword
+      lang: id
 
   - scope:
       type: "year"
     values:
-      layout: "default"
-      description: "Daftar konten yang ada disortir berdasarkan tahun pilihan."
-      image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
-      author: "ASIBUKA Group"
-      robots: "index, follow"
-      keywords: "kategori, category"
-      lang: "id"
+      layout: default
+      description: Daftar konten yang ada disortir berdasarkan tahun pilihan.
+      image: https://asibuka.com/assets/img/ASIBUKA-Blue.webp
+      author: ASIBUKA Group
+      robots: index, follow
+      keywords: tahun, arsip
+      lang: id
 
   - scope:
       type: "month"
     values:
-      layout: "default"
-      description: "Daftar konten yang ada disortir berdasarkan bulan pilihan."
-      image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
-      author: "ASIBUKA Group"
-      robots: "index, follow"
-      keywords: "kategori, category"
-      lang: "id"
+      layout: default
+      description: Daftar konten yang ada disortir berdasarkan bulan pilihan.
+      image: https://asibuka.com/assets/img/ASIBUKA-Blue.webp
+      author: ASIBUKA Group
+      robots: index, follow
+      keywords: bulan, arsip
+      lang: id
 # ------------------------------
 # Navigation links
 # ------------------------------
