--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ theme_name: ASIBUKA
 # 9. All pages and posts 
 # ------------------------------
 # ------------------------------
-# 🌐 Site Information
+# 🌐 Default Value
 # ------------------------------
 title: "ASIBUKA Group"
 description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi UMKM berbasis teknologi."
