--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ defaults:
 nav_links:
   Beranda: "/"
   Blog: "/blog/"
+  Info Resmi: "/page/"
   Hak Cipta: "/hak-cipta/"
   Hubungi Kami: "/hubungi-kami/"
   Kebijakan Privasi: "/kebijakan-privasi/"
