--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "embediframe"
-type = "javascript" # or "webpack", "module" if using ES modules
+type = "javascript"
 account_id = "dc642e62b4202987af42afb3a2aadb25"
 zone_id = "4618ae3dc797aca34490a22f06ecaba0"
 main = "src/index.js"
