update the code

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,9 @@ name = "embediframe"
 type = "javascript"
 account_id = "dc642e62b4202987af42afb3a2aadb25"
 zone_id = "4618ae3dc797aca34490a22f06ecaba0"
-main = "src/index.js"
+main = "assets/js/iframe-viewer.js"
 compatibility_date = "2024-04-17"
 
 routes = [
-  "https://www.asibuka.com/?function=iframe*"
+  "https://www.asibuka.com/*"
 ]
