--- a/assets/workers/worker-1/wrangler.toml
+++ b/assets/workers/worker-1/wrangler.toml
@@ -1,4 +1,4 @@
-name = "embediframe"
+name = "inject-iframe"
 type = "javascript"
 account_id = "dc642e62b4202987af42afb3a2aadb25"
 zone_id = "4618ae3dc797aca34490a22f06ecaba0"
