--- a/.github/workflows/cloudflare-worker-1.yml
+++ b/.github/workflows/cloudflare-worker-1.yml
@@ -5,7 +5,6 @@ on:
     branches: [main]
     paths:
       - "assets/workers/worker-1/**"
-      - "assets/workers/worker-1/wrangler.toml"
       - ".github/workflows/cloudflare-worker-1.yml"
 
 jobs:
@@ -21,3 +20,4 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          workingDirectory: assets/workers/worker-1
