--- a/assets/workers/worker-1/wrangler.toml
+++ b/assets/workers/worker-1/wrangler.toml
@@ -1,6 +1,6 @@
 name = "inject-iframe"
-type = "javascript"
-main = "assets/workers/worker-1/iframe-viewer.js"
+type = "module"
+main = "iframe-viewer.js"
 account_id = "dc642e62b4202987af42afb3a2aadb25"
 zone_id = "4618ae3dc797aca34490a22f06ecaba0"
 compatibility_date = "2024-04-17"
